导航样式添加到index.html，并且标题分层级显示

--- a/SqlSugar/从零开始/项目安装.md
+++ b/SqlSugar/从零开始/项目安装.md
@@ -127,7 +127,7 @@ public class BookB
 ```
 
 
-<style type="text/css">
+<!-- <style type="text/css">
 
     .NavigateDiv{
         position: fixed;
@@ -139,11 +139,8 @@ public class BookB
         border-style: solid;
         width:200px;
     }
-    a{
-        margin-bottom=:"50px";
-    }
     
-</style>
+</style> -->
 
 
 <div class="NavigateDiv">
@@ -153,10 +150,10 @@ public class BookB
     <td style="border:none;height:50px;width:120px"><a style="color:black" href="/#/SqlSugar/从零开始/项目安装?id=测试标题1" > T1 </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;height:50px;width:120px"><a style="color:black" href="/#/SqlSugar/从零开始/项目安装?id=测试标题2" > T2 </a></td>
+    <td style="border:none;height:50px;width:120px"><a style="color:black" href="/#/SqlSugar/从零开始/项目安装?id=测试标题2" > &emsp;T2 </a></td>
     </tr>
     <tr style="border:none;">
-    <td style="border:none;height:50px;width:120px"><a style="color:black" href="/#/SqlSugar/从零开始/项目安装?id=测试标题3" > T3 </a></td>
+    <td style="border:none;height:50px;width:120px"><a style="color:black" href="/#/SqlSugar/从零开始/项目安装?id=测试标题3" > &emsp;&emsp;T3 </a></td>
     </tr>
 </table>
 </div>
