--- a/SqlSugar/从零开始.md
+++ b/SqlSugar/从零开始.md
@@ -6,26 +6,26 @@
 
 <table style="border:none;">
 <tbody>
-
+<!-- 每个a标签后追加 target="_blank"  实现点击后打开一个新的页面 -->
 <tr style="border:none;">
-<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/从零开始/项目安装" target="_blank"> 项目安装 </a></td>
-<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/从零开始/入门必看" target="_blank">入门必看</a></td>
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/从零开始/项目安装" >项目安装 </a></td>
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/从零开始/入门必看" >入门必看</a></td>
 </tr>
 
 
 <tr style="border:none;">
-<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/从零开始/实体配置" target="_blank">实体配置</a></td>
-<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/从零开始/数据事务" target="_blank">数据事务</a></td>
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/从零开始/实体配置" >实体配置</a></td>
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/从零开始/数据事务" >数据事务</a></td>
 </tr>
 
 <tr style="border:none;">
-<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/从零开始/源码学习" target="_blank">源码学习</a></td>
-<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/从零开始/修改配置" target="_blank">修改配置</a></td>
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/从零开始/源码学习" >源码学习</a></td>
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/从零开始/修改配置" >修改配置</a></td>
 </tr>
 
 <tr style="border:none;">
-<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/从零开始/连接池" target="_blank">连接池</a></td>
-<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/从零开始/老版本" target="_blank">老版本</a></td>
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/从零开始/连接池" >连接池</a></td>
+<td style="border:none;height:50px;width:120px"><a href="/#/SqlSugar/从零开始/老版本" >老版本</a></td>
 </tr>
 
 </tbody>
