--- a/SqlSugar/从零开始/入门必看.md
+++ b/SqlSugar/从零开始/入门必看.md
@@ -1,1 +1,17 @@
 入门必看.md
+
+
+<div class="NavigateDiv">
+<h4>目录导航</h4>
+<table style="border:none;">
+    <tr style="border:none;">
+    <td style="border:none;width:160px"><a style="color:black" href="/#/SqlSugar/从零开始/项目安装?id=Nuget安装SqlSugar" > Nuget安装SqlSugar </a></td>
+    </tr>
+    <tr style="border:none;">
+    <td style="border:none;width:160px"><a style="color:black" href="/#/SqlSugar/从零开始/项目安装?id=测试标题2" > &emsp;T2 </a></td>
+    </tr>
+    <tr style="border:none;">
+    <td style="border:none;width:160px"><a style="color:black" href="/#/SqlSugar/从零开始/项目安装?id=测试标题3" > &emsp;&emsp;T3 </a></td>
+    </tr>
+</table>
+</div>
