--- a/SqlSugar/从零开始/项目安装.md
+++ b/SqlSugar/从零开始/项目安装.md
@@ -1,159 +1,33 @@
-项目安装.md
-
-## 测试标题1
-
-```
-public class StudentB
-    {
-        [SugarColumn(IsPrimaryKey = true, IsIdentity = true)]
-        public int StudentId { get; set; }
-        public string Name { get; set; }
-        public int SchoolId { get; set; }
-        [Navigate(NavigateType.OneToOne, nameof(SchoolId))]//一对一
-        public SchoolB SchoolB { get; set; }
-        [Navigate(NavigateType.OneToMany, nameof(BookB.studenId))]//BookB表中的studenId 一对多
-        public List<BookB> Books { get; set; }//注意禁止给Books手动赋值
-    }
-    
-public class SchoolB
-    {
-        [SugarColumn(IsPrimaryKey = true)]
-        public int SchoolId { get; set; }
-        public string SchoolName { get; set; }
-        [Navigate(NavigateType.OneToMany, nameof(RoomB.SchoolId))]//一对多
-        public List<RoomB> RoomList { get; set; }
-    }
-    
-public class RoomB
-    {
-        [SugarColumn(IsPrimaryKey = true)]
-        public int RoomId { get; set; }
-        public string RoomName { get; set; }
-        public int SchoolId { get; set; }
-    }
-    
-public class BookB
-    {
-        [SugarColumn(IsPrimaryKey = true, IsIdentity = true)]
-        public int BookId { get; set; }
-        public string Name { get; set; }
-        public int studenId { get; set; }
-    }
-```
 
 
-### 测试标题2
-
-```
-public class StudentB
-    {
-        [SugarColumn(IsPrimaryKey = true, IsIdentity = true)]
-        public int StudentId { get; set; }
-        public string Name { get; set; }
-        public int SchoolId { get; set; }
-        [Navigate(NavigateType.OneToOne, nameof(SchoolId))]//一对一
-        public SchoolB SchoolB { get; set; }
-        [Navigate(NavigateType.OneToMany, nameof(BookB.studenId))]//BookB表中的studenId 一对多
-        public List<BookB> Books { get; set; }//注意禁止给Books手动赋值
-    }
-    
-public class SchoolB
-    {
-        [SugarColumn(IsPrimaryKey = true)]
-        public int SchoolId { get; set; }
-        public string SchoolName { get; set; }
-        [Navigate(NavigateType.OneToMany, nameof(RoomB.SchoolId))]//一对多
-        public List<RoomB> RoomList { get; set; }
-    }
-    
-public class RoomB
-    {
-        [SugarColumn(IsPrimaryKey = true)]
-        public int RoomId { get; set; }
-        public string RoomName { get; set; }
-        public int SchoolId { get; set; }
-    }
-    
-public class BookB
-    {
-        [SugarColumn(IsPrimaryKey = true, IsIdentity = true)]
-        public int BookId { get; set; }
-        public string Name { get; set; }
-        public int studenId { get; set; }
-    }
-```
+## Nuget安装SqlSugar
 
 
-#### 测试标题3
+![](https://cdn.jsdelivr.net/gh/DotNeter-Hpf/Images/img/20220518224302.png)
+
+`详细说明`
+
+* `SqlSugar`
+    * .Net Framework可用
+    * 需手动安装驱动
+* `SqlSugarCore`
+    * .Net Core / .NET5 /.NET6可用
+    * 会自动安装常用数据库驱动
+    * 若要使用无驱动，可以用 SqlSugarCoreNoDrive（不加载驱动）
+* `SqlSugarCoreNoDrive`
+    * 是.Net Core / .NET5纯净版，需要什么驱动手动添加
 
 
-```
-public class StudentB
-    {
-        [SugarColumn(IsPrimaryKey = true, IsIdentity = true)]
-        public int StudentId { get; set; }
-        public string Name { get; set; }
-        public int SchoolId { get; set; }
-        [Navigate(NavigateType.OneToOne, nameof(SchoolId))]//一对一
-        public SchoolB SchoolB { get; set; }
-        [Navigate(NavigateType.OneToMany, nameof(BookB.studenId))]//BookB表中的studenId 一对多
-        public List<BookB> Books { get; set; }//注意禁止给Books手动赋值
-    }
-    
-public class SchoolB
-    {
-        [SugarColumn(IsPrimaryKey = true)]
-        public int SchoolId { get; set; }
-        public string SchoolName { get; set; }
-        [Navigate(NavigateType.OneToMany, nameof(RoomB.SchoolId))]//一对多
-        public List<RoomB> RoomList { get; set; }
-    }
-    
-public class RoomB
-    {
-        [SugarColumn(IsPrimaryKey = true)]
-        public int RoomId { get; set; }
-        public string RoomName { get; set; }
-        public int SchoolId { get; set; }
-    }
-    
-public class BookB
-    {
-        [SugarColumn(IsPrimaryKey = true, IsIdentity = true)]
-        public int BookId { get; set; }
-        public string Name { get; set; }
-        public int studenId { get; set; }
-    }
-```
 
 
-<!-- <style type="text/css">
-
-    .NavigateDiv{
-        position: fixed;
-        left: 92%;
-        top: 12%;
-        font-size:15px;
-        border-width: 1px;
-        padding: 8px;
-        border-style: solid;
-        width:200px;
-    }
-    
-</style> -->
+[📄文档参考：项目安装](https://www.donet5.com/home/Doc?typeId=1226)
 
 
 <div class="NavigateDiv">
 <h4>目录导航</h4>
 <table style="border:none;">
     <tr style="border:none;">
-    <td style="border:none;height:50px;width:120px"><a style="color:black" href="/#/SqlSugar/从零开始/项目安装?id=测试标题1" > T1 </a></td>
-    </tr>
-    <tr style="border:none;">
-    <td style="border:none;height:50px;width:120px"><a style="color:black" href="/#/SqlSugar/从零开始/项目安装?id=测试标题2" > &emsp;T2 </a></td>
-    </tr>
-    <tr style="border:none;">
-    <td style="border:none;height:50px;width:120px"><a style="color:black" href="/#/SqlSugar/从零开始/项目安装?id=测试标题3" > &emsp;&emsp;T3 </a></td>
+    <td style="border:none;width:160px"><a style="color:black" href="/#/SqlSugar/从零开始/项目安装?id=nuget安装sqlsugar" > Nuget安装SqlSugar </a></td>
     </tr>
 </table>
 </div>
