--- a/SqlSugar/从零开始/项目安装.md
+++ b/SqlSugar/从零开始/项目安装.md
@@ -23,7 +23,7 @@
 [📄文档参考：项目安装](https://www.donet5.com/home/Doc?typeId=1226)
 
 
-<div class="NavigateDiv">
+<div id="NavigateDiv">
 <h4>目录导航</h4>
 <table style="border:none;">
     <tr style="border:none;">
