--- a/SqlSugar/从零开始/项目安装.md
+++ b/SqlSugar/从零开始/项目安装.md
@@ -1,7 +1,5 @@
 
-
-## Nuget安装SqlSugar
-
+## 1.使用Nuget
 
 ![](https://cdn.jsdelivr.net/gh/DotNeter-Hpf/Images/img/20220518224302.png)
 
@@ -18,6 +16,17 @@
     * 是.Net Core / .NET5纯净版，需要什么驱动手动添加
 
 
+## 2.安装
+### 2.1 安装 SqlSugar
+* SqlSugar
+* MySql.Data(MySql数据库驱动)
+* System.Data.SqlClient(SqlServer数据库驱动)
+* 剩下驱动自己找吧，我没用过
+
+### 2.2 安装 SqlSugarCore
+* SqlSugarCore
+
+
 
 
 [📄文档参考：项目安装](https://www.donet5.com/home/Doc?typeId=1226)
@@ -27,7 +36,16 @@
 <h4>目录导航</h4>
 <table style="border:none;">
     <tr style="border:none;">
-    <td style="border:none;width:160px"><a style="color:black" href="/#/SqlSugar/从零开始/项目安装?id=nuget安装sqlsugar" > Nuget安装SqlSugar </a></td>
+    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/项目安装?id=_1使用nuget" > 1.使用Nuget </a></td>
+    </tr>
+    <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/项目安装?id=_2安装" > 2.安装 </a></td>
+    </tr>
+    <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/项目安装?id=_21-安装-sqlsugar" > &emsp;2.1 安装 SqlSugar </a></td>
+    </tr>
+    <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/项目安装?id=_22-安装-sqlsugarcore" > &emsp;2.2 安装 SqlSugarCore </a></td>
     </tr>
 </table>
 </div>
