--- a/SqlSugar/从零开始/入门必看.md
+++ b/SqlSugar/从零开始/入门必看.md
@@ -5,6 +5,8 @@
 
 ## 2.创建对象
 
+SqlSugarClient  和 SqlSugarScope
+
 ### 2.1 SqlSugarClient 
 **`优点：`**
 * 性能比SqlSugarScope有5%的提升
@@ -316,6 +318,8 @@ SqlSugarClient db = new SqlSugarClient(new ConnectionConfig()
 ```
 
 ## 8.长连接、短连接用法
+* 长连接 → IsAutoCloseConnection =false → 不自动释放
+* 短连接 → IsAutoCloseConnection =true → 自动释放
 
 ### 8.1 自动释放(短连接，推荐这样使用)
 
