--- a/SqlSugar/从零开始/实体配置.md
+++ b/SqlSugar/从零开始/实体配置.md
@@ -208,8 +208,10 @@ var db= new SqlSugarClient(new ConnectionConfig()
 
 
 <div id="NavigateDiv">
-<h4>目录导航</h4>
 <table style="border:none;">
+    <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:black;font-size:18px;" > 目录导航 </a></td>
+    </tr>
     <tr style="border:none;">
     <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/实体配置?id=_1实体使用自带特性" > 1.实体使用自带特性 </a></td>
     </tr>
