--- a/SqlSugar/从零开始/项目安装.md
+++ b/SqlSugar/从零开始/项目安装.md
@@ -33,8 +33,10 @@
 
 
 <div id="NavigateDiv">
-<h4>目录导航</h4>
 <table style="border:none;">
+    <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:black;font-size:18px;" > 目录导航 </a></td>
+    </tr>
     <tr style="border:none;">
     <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/项目安装?id=_1使用nuget" > 1.使用Nuget </a></td>
     </tr>
