--- a/SqlSugar/从零开始/数据事务.md
+++ b/SqlSugar/从零开始/数据事务.md
@@ -216,3 +216,55 @@ catch (Exception ex)
 
 ```
 [📄文档参考：数据事务](https://www.donet5.com/home/Doc?typeId=1183)
+
+
+
+<div id="NavigateDiv">
+<table style="border:none;">
+    <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:black;font-size:18px;" > 目录导航 </a></td>
+    </tr>
+    <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/数据事务?id=_1单库事务" > 1.单库事务 </a></td>
+    </tr>
+    <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/数据事务?id=_2多租户事务可跨库" > 2.多租户事务(可跨库) </a></td>
+    </tr>
+     <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/数据事务?id=_3调试事务" > 3.调试事务 </a></td>
+    </tr>
+     <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/数据事务?id=_4语法糖" > 4.语法糖 </a></td>
+    </tr>
+     <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/数据事务?id=_41-语法糖一" > &emsp;4.1 语法糖一 </a></td>
+    </tr>
+     <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/数据事务?id=_42-语法糖二" >  &emsp;4.2 语法糖二 </a></td>
+    </tr>
+     <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/数据事务?id=_5跨方法事务" > 5.跨方法事务 </a></td>
+    </tr>
+    <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/数据事务?id=_6cap事务" > 6.CAP事务 </a></td>
+    </tr>
+    <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/数据事务?id=_7异步事务" > 7.异步事务 </a></td>
+    </tr>
+     <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/数据事务?id=_71-用法一" > &emsp;7.1 用法一 </a></td>
+    </tr>
+     <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/数据事务?id=_72-用法二" >  &emsp;7.2 用法二 </a></td>
+    </tr>
+    <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/数据事务?id=_8设置事务隔离级别" > 8.设置事务隔离级别 </a></td>
+    </tr>
+     <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/数据事务?id=_81-单库模式用法" > &emsp;8.1 单库模式用法 </a></td>
+    </tr>
+     <tr style="border:none;">
+    <td style="border:none;width:300px"><a style="color:black" href="/#/SqlSugar/从零开始/数据事务?id=_82-多租户模式" >  &emsp;8.2 多租户模式 </a></td>
+    </tr>
+</table>
+</div>
